[#86] [CSP] Añadir apartado Unidades de vinculación en solicitudes
Se añade el apartado Unidades de vinculación a la sección de Datos del proyecto de la solicitud, siguiendo el mismo patrón que el apartado equivalente en proyectos (#59) y grupos (#56).

- Nueva tabla `solicitud_proyecto_unidad_vinculacion` con FK a `solicitud_proyecto`
- Visibilidad del apartado controlada por la configuración `proyecto_unidades_vinculacion_enabled` y las áreas de conocimiento en solicitudes pasan a depender de `proyecto_areas_conocimiento_enabled`
- Copia de las unidades de la solicitud al proyecto al crearlo desde la solicitud
- Inclusión del nuevo bloque en la exportación de solicitudes